tags/1.8.0-rc2/html/_sources/libs/full/components_base/api/full_api.rst.txt

..
    Copyright (C) 2019 Thomas Heller

    Distributed under the Boost Software License, Version 1.0. (See accompanying
    file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

.. _modules_components_base_api:

-------------------------------------------------------------------------------
components_base
-------------------------------------------------------------------------------

See :ref:`public_api` for a list of names and headers that are part of the public
|hpx| API.


.. toctree::
   :maxdepth: 1

   /libs/full/components_base/api/agas_interface.rst
   /libs/full/components_base/api/component_commandline.rst
   /libs/full/components_base/api/component_startup_shutdown.rst
   /libs/full/components_base/api/component_type.rst
   /libs/full/components_base/api/components_base_fwd.rst
   /libs/full/components_base/api/generate_unique_ids.rst
   /libs/full/components_base/api/get_lva.rst
   /libs/full/components_base/api/pinned_ptr.rst
   /libs/full/components_base/api/stub_base.rst
   /libs/full/components_base/api/abstract_component_base.rst
   /libs/full/components_base/api/abstract_migration_support.rst
   /libs/full/components_base/api/component.rst
   /libs/full/components_base/api/component_base.rst
   /libs/full/components_base/api/component_heap.rst
   /libs/full/components_base/api/create_component.rst
   /libs/full/components_base/api/create_component_fwd.rst
   /libs/full/components_base/api/fixed_component_base.rst
   /libs/full/components_base/api/locking_hook.rst
   /libs/full/components_base/api/managed_component_base.rst
   /libs/full/components_base/api/migration_support.rst
   /libs/full/components_base/api/one_size_heap_list.rst
   /libs/full/components_base/api/wrapper_heap.rst
   /libs/full/components_base/api/wrapper_heap_base.rst
   /libs/full/components_base/api/wrapper_heap_list.rst
   /libs/full/components_base/api/action_decorate_function.rst
   /libs/full/components_base/api/component_config_data.rst
   /libs/full/components_base/api/component_heap_type.rst
   /libs/full/components_base/api/component_pin_support.rst
   /libs/full/components_base/api/component_supports_migration.rst
   /libs/full/components_base/api/component_type_database.rst
   /libs/full/components_base/api/component_type_is_compatible.rst
   /libs/full/components_base/api/is_component.rst
   /libs/full/components_base/api/managed_component_policies.rst
